--- a/15 - Designo Multi Page Website/CSS/utility-classes.css
+++ b/15 - Designo Multi Page Website/CSS/utility-classes.css
@@ -4,8 +4,28 @@
     margin: 0 auto;
 }
 
+/* Button */
+.btn {
+    border: none;
+    background-color: var(--white);
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: var(--light-peach);
+    color: var(--white);
+}
+
 .primary-heading {
     font-size: var(--font-size-500);
+    color: var(--white);
+}
+
+.secondary-heading {
+    font-size: var(--font-size-400);
     color: var(--white);
 }
 
@@ -13,21 +33,24 @@
     padding: var(--section-padding);
 }
 
-.flow-space {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.flow > * + * {
+    margin-top: var(--flow-space);
+}
+
+.hero-flow > * + * {
+    margin-top: 1.75rem;
 }
 
 .grid {
     display: grid;
+    gap: 1.25rem;
 }
 
 .grid--2-columns {
     grid-template-columns: 1fr;
 }
 
-.grid-3-columns {
+.grid--3-columns {
     grid-template-columns: 1fr;
 }
 
@@ -36,9 +59,15 @@
         grid-template-columns: 1fr 1fr;
     }
 
-    .grid-3-columns {
+    .grid--3-columns {
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+
+/* List */
+.list-style-none {
+    list-style: none;
 }
 
 /* Background*/
@@ -46,10 +75,31 @@
     background-color: var(--peach);
 }
 
+.background-white {
+    background-color: var(--white);
+}
+
+.background-black {
+    background-color: var(--black);
+}
 
 /* Text-Styling */
 .uppercase {
     text-transform: uppercase;
+}
+
+.text-decoration-none {
+    text-decoration: none;
+}
+
+/* Letter Spacing*/
+
+.letter-spacing-3 {
+    letter-spacing: 5px;
+}
+
+.letter-spacing-1 {
+    letter-spacing: 2px;
 }
 
 /* Text Colors */
@@ -57,8 +107,24 @@
     color: var(--dark-grey);
 }
 
+.text-light-grey {
+    color: var(--light-grey);
+}
+
 .text-white {
     color: var(--white);
+}
+
+.text-black {
+    color: var(--black);
+}
+
+.footer-text-color {
+    color: var(--footer-text-color)
+}
+
+.text-bold {
+    font-weight: 700;
 }
 
 /* Flex Utility Classes */
@@ -82,6 +148,10 @@
     align-items: center;
 }
 
+.flex-direction-column {
+    flex-direction: column;
+}
+
 /* Font Size */
 .font-size-500 {
     font-size: var(--font-size-500);
@@ -102,3 +172,4 @@
 .font-size-100 {
     font-size: var(--font-size-100);
 }
+
