--- a/15 - Designo Multi Page Website/CSS/utility-classes.css
+++ b/15 - Designo Multi Page Website/CSS/utility-classes.css
@@ -5,16 +5,35 @@
 }
 
 /* Button */
-.btn {
+.btn-light {
+    display: block;
     border: none;
     background-color: var(--white);
     padding: 0.75rem 1.5rem;
+    max-width: 10rem;
     border-radius: 0.25rem;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
-.btn:hover {
+.btn-light:hover {
+    background-color: var(--light-peach);
+    color: var(--white);
+}
+
+.btn-dark {
+    display: block;
+    border: none;
+    background-color: var(--peach);
+    padding: 0.75rem 1.5rem;
+    color: var(--white);
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    max-width: 10rem;
+}
+
+.btn-dark:hover {
     background-color: var(--light-peach);
     color: var(--white);
 }
@@ -54,6 +73,14 @@
 
 .grid--3-columns {
     grid-template-columns: 1fr;
+}
+
+.grid-place-items-center {
+    place-items: center;
+}
+
+.margin-auto {
+    margin: 0 auto;
 }
 
 @media (min-width: 45em) {
@@ -108,7 +135,7 @@
 
 /* Letter Spacing*/
 
-.letter-spacing-3 {
+.letter-spacing-2 {
     letter-spacing: 5px;
 }
 
